# cpp-sandbox

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  docker-compose.yml  docker_entrypoint.sh  entrypoint.sh
.githooks/: pre-commit
.github/workflows/: ci.yaml  publish_container.yaml  publish_docker.yaml
array/: CMakeLists.txt
array/include/: array.hpp
array/test/: test_array.cpp
components/: CMakeLists.txt
components/_template/: CMakeLists.txt
components/_template/include/: template.hpp
components/_template/test/: CMakeLists.txt  template_test.cpp
components/array/: CMakeLists.txt
components/array/test/: test_array.cpp
components/pong/: CMakeLists.txt
components/pong/src/: pong.cpp
components/pong/test/: test_pong.cpp
components/ringbuffer/: CMakeLists.txt
components/ringbuffer/test/: CMakeLists.txt  test_ringbuffer.cpp
components/span/include/: span.hpp
components/span/test/: CMakeLists.txt  span_test.cpp
components/state_machine/: CMakeLists.txt
components/state_machine/test/: CMakeLists.txt
components/tagged_union/: CMakeLists.txt
components/tagged_union/include/: tagged_union.hpp
components/tagged_union/src/: tagged_union.cpp
components/tagged_union/test/: CMakeLists.txt  tagged_union_test.cpp
components/yahsm/: CMakeLists.txt  README.md
components/yahsm/include/: yahsm.hpp
components/yahsm/test/: CMakeLists.txt  yahsm_test.cpp
cpp-lib/: CMakeLists.txt
cpp-lib/array/include/: array.hpp
cpp-lib/array/test/: CMakeLists.txt  test_array.cpp
cpp-lib/ringbuffer/include/: ringbuffer.hpp
cpp-lib/span/: CMakeLists.txt
cpp-lib/span/include/: span.hpp
docs/: notes.md
docs/style_guide_c/: c_style_guide.md  c_style_template.c  c_style_template.h
docs/style_guide_cpp/: cpp_style_guide.md
include/: array.hpp  misc.hpp  ringbuffer.hpp
src/: CMakeLists.txt
src/Mailbox/: CMakeLists.txt  Mailbox.hpp  MailboxTest.cpp
src/ObjectPool/: CMakeLists.txt  ObjectPool.hpp  ObjectPoolTest.cpp
src/RingBuffer/: CMakeLists.txt  RingBuffer.hpp  RingBufferTest.cpp
src/advent_of_code/2021/: CMakeLists.txt  part_1.cpp  part_2.cpp
src/array/: CMakeLists.txt  array.hpp  array.test.cpp
src/bitset/: CMakeLists.txt  bitset.hpp  bitset.test.cpp
src/chsm/: CMakeLists.txt  chsm.cpp  chsm.hpp  chsm.test.cpp  readme.md
src/chsm2/: CMakeLists.txt  chsm.cpp  chsm.hpp  chsm.test.cpp  readme.md
src/fixed_vector/: CMakeLists.txt  fixed_vector.hpp  fixed_vector.test.cpp
src/hierarchical_state_machine/: CMakeLists.txt  hierarchical_state_machine.cpp  hierarchical_state_machine.demo.cpp  hierarchical_state_machine.hpp  hierarchical_state_machine.test.cpp  readme.md
src/pod_variant/: CMakeLists.txt  pod_variant.hpp  pod_variant.test.cpp
src/pong/: CMakeLists.txt  pong.cpp
src/pong/src/: pong.main.cpp
src/pong/src/components/: CMakeLists.txt  components.hpp
src/questions/: CMakeLists.txt  check_permutation.test.cpp  is_unique.test.cpp  one_away.test.cpp  palindrome_permutation.test.cpp  reverse_c_string.test.cpp  rotate_matrix.test.cpp  string_compression.test.cpp  urlify.test.cpp  zero_matrix.test.cpp
src/questions/arrays/: CMakeLists.txt  dutch_national_flag.test.cpp  rotate_matrix.test.cpp  zero_matrix.test.cpp
src/questions/arrays_and_strings/: CMakeLists.txt  atoi.test.cpp  is_unique.test.cpp  one_away.test.cpp  palindrome_permutation.test.cpp
src/questions/binary_trees/: CMakeLists.txt  binary_tree_high_balanced.test.cpp  binary_tree_node.check.cpp  binary_tree_node.hpp
src/questions/linked_lists/: CMakeLists.txt  delete_middle_node.test.cpp  list_node.hpp  list_node.test.cpp  merged_two_sorted_lists.test.cpp  remove_dupes.test.cpp  return_kth_to_last.test.cpp
src/questions/primative_types/: CMakeLists.txt
src/questions/primitive_types/: parity.test.cpp
src/questions/stacks/: CMakeLists.txt  stack_with_max.test.cpp
src/questions/strings/: CMakeLists.txt  atoi.test.cpp  check_permutation.test.cpp  is_unique.test.cpp  one_away.test.cpp  palindrome_permutation.test.cpp  reverse_c_string.test.cpp  string_compression.test.cpp  string_rotation.test.cpp  to_int.test.cpp  to_string.test.cpp  urlify.test.cpp
src/ringbuffer/: CMakeLists.txt  ringbuffer.hpp  ringbuffer.test.cpp
src/span/: CMakeLists.txt  span.cpp  span.hpp  span.test.cpp
src/state_machine/: CMakeLists.txt  state_machine.cpp  state_machine.hpp  state_machine.test.cpp
src/tagged_union/: CMakeLists.txt  tagged_union.cpp  tagged_union.hpp  tagged_union.test.cpp
src/todo/: CMakeLists.txt
src/todo/Persistence/: CMakeLists.txt  PersistenceIntf.hpp  PersistenceMock.hpp
src/todo/Storage/: CMakeLists.txt  StorageIntf.hpp  StorageMock.hpp
src/todo/StoragePort/: StoragePortIntf.hpp
src/todo/Time/: CMakeLists.txt  TimeIntf.hpp  TimeMock.hpp
src/todo/TimePort/: TimePortIntf.hpp
src/todo/Todo/: CMakeLists.txt  Todo.hpp  Todo.test.cpp
src/todo/TodoApp/: CMakeLists.txt  TodoApp.cpp  TodoApp.hpp  TodoApp.test.cpp
src/todo/TodoList/: CMakeLists.txt  TodoList.hpp
src/todo/todo/: CMakeLists.txt  todo.hpp
src/todo/todo_app/: CMakeLists.txt  todo_app.cpp  todo_app.hpp  todo_app.test.cpp
src/yahsm/: CMakeLists.txt  yahsm.hpp  yahsm.test.cpp
test/array/: CMakeLists.txt  test_array.cpp
test/ringbuffer/: CMakeLists.txt  test_ringbuffer.cpp
test/tagged_union/: CMakeLists.txt  tagged_union_test.cpp
tools/: not_running_in_docker
tools/cmake/: FindCppcheck.cmake  FindSFML.cmake  ccache.cmake  clangFormat.cmake  clangTidy.cmake  clang_format.cmake  clang_lint.cmake  clang_tidy.cmake  compiler_flags.cmake  compiler_warnings.cmake  cppcheck.cmake  gersemi.cmake  getGoogleTest.cmake  get_google_test.cmake  sanitizers.cmake  target_utils.cmake
tools/docker/: entrypoint.sh
