################################################################################
# Subdirectories
################################################################################
add_subdirectory(advent_of_code/2021)
add_subdirectory(array)
add_subdirectory(ObjectPool)
add_subdirectory(bitset)
add_subdirectory(chsm)
add_subdirectory(pod_variant)
add_subdirectory(pong)
add_subdirectory(questions)
add_subdirectory(RingBuffer)
add_subdirectory(span)
add_subdirectory(tagged_union)
add_subdirectory(todo)
add_subdirectory(yahsm)
